# company-analysis

./: .gitignore  Dockerfile  README.md  compose.yaml  env_settings.py  pyproject.toml  requirements.txt
documents/: project_detail.md
src/api/: main.py  ui.py
src/flows/: daily_update_flow.py  stock_flow.py
src/tasks/: backtest.py  data_fetcher.py  data_j_preprocessor.py  data_processor.py  listing_checker.py  split_adjustment.py
src/utils/: log_config.py
